--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
   "homepage": "https://github.com/dangnguyenn/Namazon#readme",
   "dependencies": {
     "axios": "^0.20.0",
-    "express": "^4.17.1"
+    "connect-mongo": "^3.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.10"
   },
   "devDependencies": {}
 }
